tests/ui/endpoint/invalid_return_type.stderr
error[E0277]: the trait bound `FooResponse: ResponseSchema` is not satisfied
  --> tests/ui/endpoint/invalid_return_type.rs:12:18
   |
12 | fn endpoint() -> FooResponse {
   |                  ^^^^^^^^^^^ the trait `ResponseSchema` is not implemented for `FooResponse`
   |
note: required by a bound in `gotham_restful::EndpointWithSchema::Output`
  --> src/endpoint.rs
   |
   |     #[openapi_bound("Output: crate::ResponseSchema")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `gotham_restful::EndpointWithSchema::Output`

error[E0277]: the trait bound `FooResponse: gotham_restful::IntoResponse` is not satisfied
  --> tests/ui/endpoint/invalid_return_type.rs:12:18
   |
12 | fn endpoint() -> FooResponse {
   |                  ^^^^^^^^^^^ the trait `gotham_restful::IntoResponse` is not implemented for `FooResponse`
   |
note: required by a bound in `gotham_restful::EndpointWithSchema::Output`
  --> src/endpoint.rs
   |
   |     type Output: IntoResponse + Send;
   |                  ^^^^^^^^^^^^ required by this bound in `gotham_restful::EndpointWithSchema::Output`
